--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "directus",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "engines": {
+    "node": "18.x"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "directus-extension-sync": "^3.0.2"
+    "@directus/sdk": "^18.0.3",
+    "axios": "^1.7.3",
+    "directus": "^11.3.5",
+    "directus-extension-sync": "^2.0.0",
+    "pg": "^8.12.0"
   }
 }
